# sigil

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-COMMERCIAL  README.md  SPEC.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_pattern.md
examples/: bench_primitives.rs  bench_sample_text.txt
openclaw-skill/: README.md
openclaw-skill/sigil/: SKILL.md
openclaw-skill/sigil/references/: pattern-reference.md
openclaw-skill/sigil/scripts/: sigil-install.sh
sigil-ts/: README.md  package.json
sigil-ts/src/: index.ts
spec/: 01-overview.md  02-identity.md  03-interception.md  04-audit.md  05-mcp-extension.md
src/: audit.rs  identity.rs  lib.rs  policy.rs  scanner.rs  sigil_envelope.rs  vault.rs
zeroclaw-skill/: Cargo.toml  README.md
zeroclaw-skill/src/: lib.rs
