[package]
name = "sigil"
version = "0.1.0"
edition = "2021"
description = "SIGIL — Sovereign Identity-Gated Interaction Layer"
license = "EUPL-1.2"
repository = "https://github.com/sigil-protocol/sigil"
keywords = ["security", "identity", "agent", "mcp", "protocol"]
categories = ["authentication", "cryptography"]

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
